@@ -1,8 +1,10 @@
 1.3beta1 - [RELEASEDATE]
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
+- Fixed issue #8240: ezcQueryExpression::in does not work with strings.
 - Implemented enhancement #8473: Oracle Limit/Offset optimization.
-- Fixed bug:#8240: ezcQueryExpression::in does not work with strings.
+- Implemented issue #9965: Support for delayed initialization through
+  ezcBaseInit.
 
 1.2 - Monday 18 December 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
